cmake_minimum_required(VERSION 3.5)
find_package(Threads)
set(source
        atomic.h
        tblog.cpp
        EventHandler.h
        Functional.h
        Handle.h
        iqueuehandler.h
        linklist.h
        Lock.h
        PublicDefine.h
        runnable.h
        tblockguard.h
        tbnetutil.cpp
        tbsys.h
        thread.h
        threadcond.h
        Time.cpp
        Monitor.h
        bytebuffer.cpp
        Cond.cpp
        threadmutex.h
        config.cpp
        CtrlCHandler.cpp
        defaultrunnable.cpp
        Exception.cpp
        filequeue.cpp
        filequeuethread.cpp
        fileutil.cpp
        Memory.hpp
        Mutex.cpp
        Network.cpp
        process.cpp
        profiler.cpp
        queuethread.cpp
        RecMutex.cpp
        Service.cpp
        Shared.cpp
        StaticMutex.cpp
        stringutil.cpp
        tbrwlock.cpp
        TbThread.cpp
        tbtimeutil.cpp
        ThreadException.cpp
        ThreadPool.cpp
        Timer.cpp
        Timer.cpp
        Utility.cpp
        WarningBuffer.cpp
        )

add_library(tbsys ${source})
target_link_libraries(tbsys ${CMAKE_THREAD_LIBS_INIT})
